Criando inventario e Itens

--- a/letscode/pom.xml
+++ b/letscode/pom.xml
@@ -46,7 +46,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.dtrules</groupId>
+            <artifactId>el</artifactId>
+            <version>4.3</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
