--- a/letscode/pom.xml
+++ b/letscode/pom.xml
@@ -52,6 +52,18 @@
             <version>4.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.dtrules</groupId>
+            <artifactId>dsl</artifactId>
+            <version>4.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>openapi-contrib__openapi-schema-to-json-schema</artifactId>
+            <version>3.1.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<build>
